# my-elastic-project

./: Dockerfile_Kibana  Dockerfile_elasticsearch  Dockerfile_logstash  docker-compose.yml  main.py  pyproject.toml
config/: metricbeat.yml
confir/: elasticsearch.yml
data/: uuid
data/mapping_movies/: mapping.json  mapping2.json  mapping3.json
logstash/: logstash.conf
