[project]
name = "elk-stream-manel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.17.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 125
select = ["E", "F", "W"]
